# FounderFortress

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: path_config.py
scripts/: index.html  index.js  style.css
src/: custom_exception.py  logger.py
src/Router/: router.py
src/generation/: Legal_documents_are_written_records_that_outline_agreements,_permissions,_or_facts_with_legal_significance.docx  graders.py  graph.py  llm_router.py  model.py  tools.py
src/retrieval/: retiver.py
