[project]
name = "kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.0.13",
    "docling>=2.39.0",
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "setuptools>=80.9.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
]
